2006-02-24	Benedikt Meurer <benny@xfce.org>

	* autogen.sh: Be sure to run svn info with LC_ALL=C.

2006-02-19	Benedikt Meurer <benny@xfce.org>

	* NEWS, THANKS: Add translator credits for Stavros Giannouris (el
	  translator).
	* Terminal.ui, terminal/terminal-preferences.c,
	  terminal/terminal-shortcut-editor.c, terminal/terminal-window.c: Add
	  new action "Detach Tab" to the UI manager and the shortcuts manager.
	  Bug #1477.
	* po/Terminal.pot, po/*.po: Merge new strings.

2006-02-18	Daichi Kawahata <daichi@xfce.org>

	* configure.in.in: Add "el" to XDT_I18N().

2006-02-14	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-preferences.c, terminal/terminal-window.c: Add new
	  hidden setting "MiscAlwaysShowTabs", based on a patch provided by
	  Alexander Iliev <sasoiliev@mamul.dyndns.org>.
	* terminal/terminal-preferences.c, terminal/terminal-window.c: Add new
	  hidden setting "MiscTabPosition" which specifies the position where
	  the notebook tabs should be placed (can be either GTK_POS_TOP,
	  GTK_POS_BOTTOM, GTK_POS_RIGHT or GTK_POS_LEFT).
	* terminal/terminal-tab-header.c: Use vertical labels if the tab 
	  position is GTK_POS_RIGHT or GTK_POS_LEFT.
	* doc/C/Terminal.xml.in: Add new hidden options to the manual.

2006-02-14	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-screen.c(terminal_screen_get_child_environment):
	  Set DISPLAY properly for multi-screen per display environments.
	  Bug #1461.

2006-02-10	Benedikt Meurer <benny@xfce.org>

	* doc/C/Terminal.xml.in, terminal/main.c: Apply Diachi's 2nd typo
	  correction patch. Bug #1443.

2006-02-09	Benedikt Meurer <benny@xfce.org>

	* doc/C/Terminal.xml.in: Apply Daichi's documentation patch to fix
	  various typos. Bug #1443.

2006-02-08	Benedikt Meurer <benny@xfce.org>

	* NEWS, THANKS: Apply Daichi's name correction patch.

2006-02-06	Benedikt Meurer <benny@xfce.org>

	* helpers/Makefile.am, helpers/exo-open-browser.desktop.in,