@@ -1,3 +1,15 @@
+2006-02-25	Benedikt Meurer <benny@xfce.org>
+
+	* terminal/terminal-preferences.c: Add hidden option MiscInheritGeometry
+	  which controls whether new windows will inherit the geometry of the
+	  parent window.
+	* terminal/terminal-window.{c,h}: Make terminal_window_get_active()
+	  public.
+	* terminal/terminal-app.c(terminal_app_new_window): If the user has
+	  enabled MiscInheritGeometry, try to apply the geometry of the
+	  previous window to the new window.
+	* doc/C/Terminal.xml.in: Update the user manual.
+
 2006-02-24	Benedikt Meurer <benny@xfce.org>
 
 	* autogen.sh: Be sure to run svn info with LC_ALL=C.
